--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,7 +2,7 @@
 
 // Gray and Brand Colors for use across theme
 
-$theme-primary:    #FFF056;
+$theme-primary:    #CBE32D;
 
 $gray-base:        #000 !default;
 $gray-darker:	   lighten($gray-base, 13.5%) !default; // #222
