--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -4,7 +4,7 @@
 
 $theme-primary:    #CBE32D;
 
-$gray-base:        #000 !default;
+$gray-base:        #CBE32D !default;
 $gray-darker:	   lighten($gray-base, 13.5%) !default; // #222
 $gray-dark:		   lighten($gray-base, 20%) !default;   // #333
 $gray:			   lighten($gray-base, 33.5%) !default; // #555
