--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -49,7 +49,7 @@ p {
 
 .bg-dark {
     color: white;
-    background-color: $gray-darker !important;
+    background-color: #CBE32D !important;
 }
 
 .text-faded {
@@ -70,13 +70,13 @@ section {
 
 ::-moz-selection {
     color: white;
-    background: $gray-darker;
+    background: #CBE32D;
     text-shadow: none;
 }
 
 ::selection {
     color: white;
-    background: $gray-darker;
+    background: #CBE32D;
     text-shadow: none;
 }
 
@@ -91,5 +91,5 @@ img::-moz-selection {
 }
 
 body {
-    -webkit-tap-highlight-color: $gray-darker;
+    -webkit-tap-highlight-color: #CBE32D;
 }
