--- a/scss/_bootstrap-overrides.scss
+++ b/scss/_bootstrap-overrides.scss
@@ -1,6 +1,6 @@
 // Bootstrap overrides for this template
 .text-primary {
-    color: $theme-primary !important;
+    color: White !important;
 }
 
 .no-gutter > [class*='col-'] {
